Перемести точки в некоторых стримах. Добавил файлы для проверки контроллера. Убрал модификаторы у тестов. Разбил тесты на 3 части. Сделал переносы в CreditConveyorOfferServiceTest. Переделал расчет ПСК.